--- a/cappellasistina.html
+++ b/cappellasistina.html
@@ -57,16 +57,17 @@
        </div>
                        
              <div class="jumbotron">
-               <h1 class="display-3">Sonetto 5 and the Sistine Chapel:</h1> 
-               <h1 class="Michelangelo's letter to Giovanni da Pistoia</h1>
+               <h1 class="display-3">"I am not in a good place, and I am no painter":</h1> 
+               <h1 class="Michelangelo's desperate letter to Giovanni da Pistoia</h1>
   <hr class="my-4">
   <p class="lead">
-         The sentence “I am no painter” is something one would never expect to hear from an artist like Michelangelo Buonarroti. His frescos in the Sistine Chapel, most famous for The Last Judgment and the Creation of Man have become an icon of western culture and are considered to be Michelangelo’s most famous painted works. However, contrary to popular belief, Michelangelo was not just a visual artist. Not only was he celebrated for his painted and sculpted works; he was an admired architect, and a pretty amazing poet as well.</p>
-<p class="lead">Now, you might ask yourself at first: why would an incredibly gifted artist like Michelangelo also feel the need to write poetry? But, looking at it from a different point of view, it might actually make sense. There are a few possible explanations: one of them is the intellectual milieu in which the artist found himself. He might have gone along with the social codes and expectations and profiled himself as a typical, Da Vinci-like ‘Renaissance man’, a homo universalis. Another, more likely explanation is the simple motive of self-expression. Many researchers have noted that Michelangelo projected himself onto anything he created, thus making himself into his own point of reference.  His poetry but also all his other art is filled with little bits and pieces of autobiographical information, and it is up to us to find and interpret them.</p>
+         “I am no painter” is something you would never expect to hear from an artist like Michelangelo Buonarroti. His frescos in the Sistine Chapel, most famous for The Last Judgment and the Creation of Man have become an icon of western culture and are considered to be Michelangelo’s most famous painted works. However, contrary to popular belief, Michelangelo was not just a visual artist. Not only was he celebrated for his painted and sculpted works; he was an admired architect, and a pretty amazing poet as well.</p>
+<p class="lead">Why would an incredibly gifted artist like Michelangelo also feel the need to write poetry? He might have been influenced by the intellectual milieu in which he found himself; going along with the social codes and expectations and profiling himself as a typical, Da Vinci-like ‘Renaissance man’, a homo universalis. It is nevertheless more likely that it was for the simple reason of self-expression. It has been noted many times that Michelangelo projected himself onto anything he created, thereby making himself into his own point of reference. Since he did not like to speak about his true thoughts and feelings, and almost never did (he was rather paranoid), his creative output is the only means by which we have the possibility to get closer to the master. Michelangelo's poetry, but also all his other art is filled with little bits and pieces of autobiographical information, and it is up to us to find and interpret them.</p>
 
 <p class="lead">On a spring day in 1508, the 10th of May to be precise, 33-year old Michelangelo wrote that he would start working on the vault of Pope Sixtus’ chapel in Rome. Four years later, in October 1512, the work was finished and the Sistine Chapel was re-opened. People were absolutely amazed by the result. You had to be superhuman to create something like this.</p>
 
-<p class="lead">You indeed had to be something like a superhuman: imagine spending four years on high scaffolds with only a small, poorly lit and moldy space to work in. It was under these conditions that Michelangelo probably wrote sonnet 5 to his friend Giovanni da Pistoia:</p></h3>
+<p class="lead">You indeed had to be something like a superhuman: imagine spending four years on high scaffolds with only a small, poorly lit and moldy space to work in. It was under these conditions that Michelangelo probably wrote a sonnet to his friend Giovanni da Pistoia.</p>
+	       <p class="lead">In this sonnet, Michelangelo complains about the physical challenges he has to endure while painting the ceiling of the famous Sistine Chapel. His back is aching, his neck is arched, his beard is completely stiff from all the paint that is dripping onto his face.</p>
   </div>
     </div>
 
@@ -197,13 +198,16 @@
 <tr>
       <th scope="row">20</th>
       <td>non sendo in loco bon, né io pittore.</td>
-      <td>I’ll land in no good place, and I’m no painter.</td>
+      <td>I am not in a good place, and I am no painter.</td>
     </tr>
 </tbody>
 </table>
   </div>
+		
 		     <div class="jumbotron">
-					   <p class="lead">Have a look at the ceiling yourself:</p>
+					   <p class="lead">If we want a trustworthy impression of the artist's "true" thinking, a sonnet like this is all we could ask for: on this piece of paper, Michelangelo does not only give a written account of his experiece, he also draws it for us as you can see on the bottom-right of the paper. It only takes a little imagination to see his stained face and feel his sore limbs in this autobiographical sketch. In the final verse, Michelangelo tells Giovanni (and us) that he does not like being here, but most importantly: that he does not like to paint.</p>
+					   
+														     <p class="lead">Have a look at the ceiling yourself: what do you think?</p>
 							  <iframe src="https://www.google.com/maps/embed?pb=!4v1538430417551!6m8!1m7!1sCAoSLEFGMVFpcE9xNkh3amRHX05aQmNrRWNVYUp6cWotLXRRZU9oQlRERDZ4NVlH!2m2!1d41.90299080324293!2d12.45448166087399!3f335.4189430114611!4f84.54835782911698!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 							  </div>
 							  <div class=footer>
